apps/home/forge/perforce/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perforce-server
  namespace: forge
spec:
  replicas: 0
  template:
    spec:
      containers:
        - name: perforce-server

          securityContext:
            runAsUser: 2000
            runAsGroup: 2000
            fsGroup: 2000

          command: ["p4d"]
          args:
            - "-r"
            - "/p4/root"
            - "-J"
            - "/p4/journals/journal"
            - "-L"
            - "/p4/logs/log"
            - "-p"
            - "1666"

          volumeMounts:
            - name: perforce-storage
              mountPath: /p4
      volumes:
        - name: perforce-storage
          persistentVolumeClaim:
            claimName: perforce-data-pvc
