apps/home/forge/perforce/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: perforce-route
  namespace: game
spec:
  entryPoints:
    - perforce
  routes:
    - match: HostSNI(`*`)
      services:
        - name: perforce-service
          port: 1666
